--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "3ffae59a-46a9-4efe-bb11-5530e9d574da"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -116,6 +119,10 @@
               "devServerTarget": "AngularFirebase:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
